Fixed Bugs Involving Cat Facts not Displaying Properly and Cat Images Stretching

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
 .img-class {
     width: 100%;
     height: 100%;
+    object-fit: contain;
+    background-color: black;
 }
 
 .custom-background-header {
